--- a/text_summarizer/txt_summarizer.ipynb
+++ b/text_summarizer/txt_summarizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "34b732b0-8517-4c77-9f01-127ce79fcf96",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "97546bea-ec44-45de-8216-1f525980b9ed",
    "metadata": {
     "scrolled": true
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7d7ba892-b90c-402f-9cc5-cdfb551b5afc",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "        if response.status_code != 200:\n",
     "            print(f\"Failed to retrieve the URL. Status code: {response.status_code}\")\n",
     "            return;\n",
-    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
     "        self.title = soup.title.string if soup.title else \"No title found\"\n",
     "\n",
     "        # remove irrelevant tags as we need only texts\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "d0122a40-1445-47eb-bc37-9c98ad6e510b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "dc96a05e-e957-4052-970d-7668f622a460",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "93791238-ac76-4754-9784-3b1be2dbbc60",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "cbc0f0c8-dbcb-4dff-8f53-3f8fa1370ad0",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "63d6b1f2-8dcb-43c6-95dd-36a562d2c9db",
    "metadata": {},
    "outputs": [
@@ -166,14 +166,16 @@
       "text/markdown": [
        "## Edward Donner Website Summary\n",
        "\n",
-       "This website is a personal portfolio for Ed Donner, co-founder and CTO of Nebula.io, an AI company focused on talent discovery.  Ed describes his interests as coding, LLMs, DJing, and electronic music production. He's also the founder and former CEO of untapt, an AI startup acquired in 2021.  His website features \"Outsmart,\" an arena where LLMs compete in diplomacy and deviousness.\n",
+       "Edward Donner is a co-founder and CTO of Nebula.io, an AI company focused on helping people discover their potential.  He's also the founder and CEO of  untapt, an AI startup acquired in 2021.  His website features \"Outsmart,\" an arena where LLMs compete diplomatically.  He enjoys coding, experimenting with LLMs, DJing, and electronic music production.\n",
+       "\n",
        "\n",
        "**Recent Posts:**\n",
        "\n",
-       "* **December 21, 2024:** Welcomes SuperDataScientists.\n",
-       "* **November 13, 2024:**  Provides resources on mastering AI and LLM engineering.\n",
-       "* **October 16, 2024:** Offers resources for transitioning from software engineer to AI data scientist.\n",
-       "* **August 6, 2024:** Announces the Outsmart LLM arena.\n"
+       "* **December 21, 2024:** Welcome, SuperDataScientists!\n",
+       "* **November 13, 2024:** Mastering AI and LLM Engineering – Resources\n",
+       "* **October 16, 2024:** From Software Engineer to AI Data Scientist – resources\n",
+       "* **August 6, 2024:** Outsmart LLM Arena – a battle of diplomacy and deviousness\n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "9a112021-78a1-4725-b9c7-d162b0bc8822",
    "metadata": {},
    "outputs": [],
@@ -225,35 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "29d10e26-d92d-4c09-a071-79a388254d54",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "# Website Summary\n",
-       "### Home - Edward Donner\n",
-       "This website is a personal blog of Edward Donner, the co-founder and CTO of Nebula.io. The site features:\n",
-       "\n",
-       "*   **About Me**: A brief introduction to Edward's interests, experience, and work in AI.\n",
-       "*   **Personal Projects**: Links to his other ventures, including untapt (acquired in 2021) and Nebula.io.\n",
-       "*   **News/Announcements**:\n",
-       "    *   **December 21, 2024**: Welcome message for SuperDataScientists, indicating a community or newsletter signup process.\n",
-       "    *   **November 13, 2024**: Mastering AI and LLM Engineering – Resources, suggesting a series of articles or resources on the topic.\n",
-       "    *   **October 16, 2024**: From Software Engineer to AI Data Scientist – resources, another resource-focused announcement.\n",
-       "    *   **August 6, 2024**: Outsmart LLM Arena – a battle of diplomacy and deviousness, describing a unique arena where LLMs compete in diplomatic challenges.\n",
-       "\n",
-       "The site also features links to Edward's professional profiles on LinkedIn, Twitter, Facebook, and a newsletter subscription process."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "summarizeLocally(\"https://edwarddonner.com\")"
    ]
