added gradio ui starter + added ui to brochure generator with choice of model

--- a/brochure_generator/brochure_generator.ipynb
+++ b/brochure_generator/brochure_generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c142ec78",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,9 @@
     "from dotenv import load_dotenv\n",
     "from bs4 import BeautifulSoup\n",
     "from IPython.display import Markdown, display, update_display\n",
-    "import google.generativeai as genai"
+    "import google.generativeai as genai\n",
+    "import ollama\n",
+    "import gradio as gr"
    ]
   },
   {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2b25b8cd",
    "metadata": {},
    "outputs": [],
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d0e5aa3e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "001f2e46",
    "metadata": {},
    "outputs": [],
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bfa9946a",
    "metadata": {},
    "outputs": [],
@@ -168,38 +170,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2314891",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_prompt(website):\n",
-    "    return f\"context: {link_system_prompt}, prompt: {get_links_user_prompt(website)}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "697a8c85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_links(url):\n",
+    "def get_links_gemini(url):\n",
     "    website = Website(url)\n",
-    "    model = genai.GenerativeModel(\"gemini-1.5-flash\")\n",
-    "    response = model.generate_content(get_prompt(website))\n",
+    "    model = genai.GenerativeModel(\"gemini-1.5-flash\", system_instruction=link_system_prompt)\n",
+    "    response = model.generate_content(get_links_user_prompt(website))\n",
     "    result = json.loads(response.text)\n",
+    "    return result\n",
+    "\n",
+    "def get_links_ollama(url):\n",
+    "    website = Website(url)\n",
+    "    messages=[\n",
+    "        {'role':'system', 'content':link_system_prompt},\n",
+    "        {'role':'user', 'content':get_links_user_prompt(website)},\n",
+    "    ]\n",
+    "    response = ollama.chat(model=\"llama3.2\", messages=messages)\n",
+    "    result = json.loads(response['message']['content'])\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "facb1a52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'links': [{'type': 'about page', 'url': 'https://www.anthropic.com'},\n",
+       "  {'type': 'company page', 'url': 'https://www.anthropic.com/company'},\n",
+       "  {'type': 'careers page', 'url': 'https://www.anthropic.com/careers'},\n",
+       "  {'type': 'news page', 'url': 'https://www.anthropic.com/news'},\n",
+       "  {'type': 'research page',\n",
+       "   'url': 'https://www.anthropic.com/research#entry:8@1:url'},\n",
+       "  {'type': 'press contact email', 'url': 'mailto:press@anthropic.com'},\n",
+       "  {'type': 'support webpage', 'url': 'https://support.anthropic.com/'},\n",
+       "  {'type': 'status page', 'url': 'https://status.anthropic.com/'},\n",
+       "  {'type': 'trust page', 'url': 'https://trust.anthropic.com/'},\n",
+       "  {'type': 'twitter handle', 'url': 'https://twitter.com/AnthropicAI'},\n",
+       "  {'type': 'linkedin company page',\n",
+       "   'url': 'https://www.linkedin.com/company/anthropicresearch'},\n",
+       "  {'type': 'youtube channel', 'url': 'https://www.youtube.com/@anthropic-ai'}]}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "get_links(\"https://anthropic.com\")"
+    "get_links_ollama(\"https://anthropic.com\")"
    ]
   },
   {
@@ -212,17 +237,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6dfbcbc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_details(url):\n",
+    "def get_details_gemini(url):\n",
     "    result = \"Landing Page:\\n\"\n",
     "    website = Website(url)\n",
     "    result += website.get_contents()\n",
-    "    links = get_links(url)\n",
+    "    links = get_links_gemini(url)\n",
     "    for link in links['links']:\n",
+    "        result += f\"\\n\\n{link['type']}:\\n\"\n",
+    "        result += Website(link['url']).get_contents()\n",
+    "    return result\n",
+    "\n",
+    "def get_details_ollama(url):\n",
+    "    result = \"Landing Page:\\n\"\n",
+    "    website = Website(url)\n",
+    "    result += website.get_contents()\n",
+    "    links = get_links_ollama(url)\n",
+    "    for link in links['links']:\n",
+    "        print(link)\n",
     "        result += f\"\\n\\n{link['type']}:\\n\"\n",
     "        result += Website(link['url']).get_contents()\n",
     "    return result"
@@ -235,32 +271,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(get_details(\"https://anthropic.com\"))"
+    "print(get_details_ollama(\"https://anthropic.com\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9cebc583",
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt = \"You are an assistant that analyzes the contents of several relevant pages from a company website \\\n",
     "and creates a short brochure about the company for prospective customers, investors and recruits. Respond in markdown.\\\n",
-    "Include details of company culture, customers and careers/jobs if you have the information.\""
+    "Include details of company culture, customers and careers/jobs if you have the information. If including links then do not \\\n",
+    "put placeholder for them instead put clickable links.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c7f9cfd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_brochure_user_prompt(company_name, url):\n",
+    "def get_brochure_user_prompt_gemini(company_name, url):\n",
     "    user_prompt = f\"You are looking at a company called: {company_name}\\n\"\n",
     "    user_prompt += f\"Here are the contents of its landing page and other relevant pages; use this information to build a short brochure of the company in markdown.\\n\"\n",
-    "    user_prompt += get_details(url)\n",
+    "    user_prompt += get_details_gemini(url)\n",
+    "    user_prompt = user_prompt[:5_000] # Truncate if more than 5,000 characters\n",
+    "    return user_prompt\n",
+    "\n",
+    "def get_brochure_user_prompt_ollama(company_name, url):\n",
+    "    user_prompt = f\"You are looking at a company called: {company_name}\\n\"\n",
+    "    user_prompt += f\"Here are the contents of its landing page and other relevant pages; use this information to build a short brochure of the company in markdown.\\n\"\n",
+    "    user_prompt += get_details_ollama(url)\n",
     "    user_prompt = user_prompt[:5_000] # Truncate if more than 5,000 characters\n",
     "    return user_prompt"
    ]
@@ -313,7 +357,7 @@
    "source": [
     "# generate stream of content\n",
     "\n",
-    "def generate_brochure_stream(company_name, url):\n",
+    "def generate_brochure_stream_gemini(company_name, url):\n",
     "    model = genai.GenerativeModel(\"gemini-1.5-flash\",\n",
     "    system_instruction=system_prompt\n",
     "    )\n",
@@ -326,6 +370,22 @@
     "    for chunk in response:\n",
     "        chunk.text.replace(\"'''\", \"\").replace(\"markdown\", \"\")\n",
     "        result += chunk.text\n",
+    "        update_display(Markdown(result), display_id=display_handler.display_id)\n",
+    "\n",
+    "\n",
+    "def generate_brochure_stream_ollama(company_name, url):\n",
+    "    messages = [\n",
+    "        {'role':'system', 'content':system_prompt},\n",
+    "        {'role':'user', 'content': get_brochure_user_prompt(company_name, url)}\n",
+    "    ]\n",
+    "    response = ollama.chat(model='llama3.2', messages=messages)\n",
+    "    \n",
+    "    result = \"\"\n",
+    "    display_handler = display(Markdown(\"\"), display_id=True)\n",
+    "    for chunk in response:\n",
+    "        message = chunk['message']['content']\n",
+    "        message.replace(\"'''\", \"\").replace(\"markdown\", \"\")\n",
+    "        result += message\n",
     "        update_display(Markdown(result), display_id=display_handler.display_id)\n"
    ]
   },
@@ -341,8 +401,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6ed432cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate stream of content\n",
+    "\n",
+    "def generate_brochure_stream_gemini_gradio(company_name, url):\n",
+    "    model = genai.GenerativeModel(\"gemini-1.5-flash\",\n",
+    "    system_instruction=system_prompt\n",
+    "    )\n",
+    "    response = model.generate_content(\n",
+    "        get_brochure_user_prompt_gemini(company_name, url), \n",
+    "        stream = True, \n",
+    "    )\n",
+    "    result = \"\"\n",
+    "    for chunk in response:\n",
+    "        chunk.text.replace(\"'''\", \"\").replace(\"markdown\", \"\")\n",
+    "        result += chunk.text\n",
+    "        yield result\n",
+    "\n",
+    "def generate_brochure_stream_ollama_gradio(company_name, url):\n",
+    "    messages = [\n",
+    "        {'role':'system', 'content':system_prompt},\n",
+    "        {'role':'user', 'content': get_brochure_user_prompt_ollama(company_name, url)}\n",
+    "    ]\n",
+    "    response = ollama.chat(model='llama3.2', messages=messages,stream=True)\n",
+    "    \n",
+    "    result = \"\"\n",
+    "    for chunk in response:\n",
+    "        message = chunk['message']['content']\n",
+    "        message.replace(\"'''\", \"\").replace(\"markdown\", \"\")\n",
+    "        result += message\n",
+    "        yield result\n",
+    "\n",
+    "def stream_model(model, company_name, url):\n",
+    "    if model.upper()==\"GEMINI\":\n",
+    "       result = generate_brochure_stream_gemini_gradio(company_name, url)\n",
+    "    elif model.upper()==\"LAMA\":\n",
+    "       result = generate_brochure_stream_ollama_gradio(company_name, url)\n",
+    "    else:\n",
+    "        raise ValueError(\"unknown model!\")\n",
+    "    yield from result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9b9a8875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7871\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7871/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'About page', 'url': 'https://www.anthropic.com/company'}\n",
+      "{'type': 'Research page', 'url': 'https://www.anthropic.com/research#entry:8@1:url'}\n",
+      "{'type': 'Claude AI website', 'url': 'https://claude.ai/'}\n",
+      "{'type': 'Jobs/Careers page', 'url': 'https://www.anthropic.com/jobs'}\n",
+      "{'type': 'News article', 'url': 'https://www.anthropic.com/news/core-views-on-ai-safety'}\n",
+      "{'type': 'Customer section', 'url': 'https://www.anthropic.com/customers'}\n",
+      "{'type': 'Support website', 'url': 'https://support.anthropic.com/'}\n",
+      "{'type': 'Status page', 'url': 'https://status.anthropic.com/'}\n",
+      "{'type': 'Country support', 'url': 'https://www.anthropic.com/supported-countries'}\n",
+      "{'type': 'Company social media profiles', 'url': 'https://www.linkedin.com/company/anthropicresearch'}\n",
+      "{'type': 'Company Twitter profile', 'url': 'https://twitter.com/AnthropicAI'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "view = gr.Interface(\n",
+    "    fn=stream_model,\n",
+    "    inputs=[gr.Dropdown([\"Gemini\", \"Lama\"], label=\"Select model\", value=\"Gemini\"), gr.Textbox(label=\"Company Name:\"), gr.Textbox(label=\"Website Link:\")],\n",
+    "    outputs=[gr.Markdown(label=\"Response:\")],\n",
+    "    flagging_mode=\"never\"\n",
+    ")\n",
+    "view.launch()\n",
+    "# view.launch(share=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4052d57e",
    "metadata": {},
    "outputs": [],
    "source": []
